update fox android >=4